Attempting to solve issue with @media query not working on iPhone X

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ body {
 
 /* ----- iPhone X  ----- */
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+@media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
   .banner {
     height: 60vh;
   }
